--- a/item_indexer/pubspec.yaml
+++ b/item_indexer/pubspec.yaml
@@ -1,4 +1,4 @@
-name: redux_sample
+name: item_indexer
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
